--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="/CampusWayDoc/Document.html">DOCUMENTAION</a>
+                    <a class="nav-link page-scroll" href="/Document.html">DOCUMENTAION</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
