--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                 </span>
                             </a>
                         </div> <!-- end of video-wrapper -->
-                    </div> <!-- end of image-container -->
+                    </div> <!--  of image-container -->
                     <!-- end of video preview -->
 
                 </div> <!-- end of col -->
